--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "devDependencies": {
     "eslint": "^7.11.0",
     "eslint-plugin-react": "^7.27.1",
+    "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.95.14",
+    "sqlite3": "^5.0.2"
   }
 }
